tests/neg-custom-args/retain-trees/Escapee.neg.eff.scala
object Escapee {
  import scala.annotation.internal.local
  def escapade(@local notLocal: Any): Any =
    notLocal // error
}
